--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wsdl-tsclient",
-  "version": "1.4.0",
+  "name": "@szacskesz/wsdl-tsclient",
+  "version": "1.5.0",
   "description": "Generate typescript soap client with typescript definitons from WSDL file.",
   "main": "dist/src/index.js",
   "bin": {
@@ -10,13 +10,13 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "pretest": "rm -rf ./test/generated",
+    "pretest": "rimraf ./test/generated",
     "test": "npm run test:node-soap && npm run test:node-soap2 && npm run test:public",
     "test:node-soap": "ts-node node_modules/tape/bin/tape ./test/node-soap/*.test.ts | tap-spec",
     "test:node-soap2": "ts-node node_modules/tape/bin/tape ./test/node-soap/**/*.test.ts | tap-spec",
     "test:public": "ts-node node_modules/tape/bin/tape ./test/resources-public/**/*.test.ts | tap-spec",
-    "preversion": "npm test && npm run build",
-    "prepublishOnly": "npm test && npm run dist",
+    "preversion": "npm run build",
+    "prepublishOnly": "npm run dist",
     "prepare": "npm run build",
     "dev": "ts-node -T ./dev.ts",
     "dist": "tsc",
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dderevjanik/wsdl-tsclient.git"
+    "url": "git+https://github.com/szacskesz/wsdl-tsclient.git"
   },
   "keywords": [
     "soap",
@@ -35,14 +35,15 @@
     "wsdl-client",
     "typescript"
   ],
-  "author": "Daniel Derevjanik <daniel.derevjanik@gmail.com>",
+  "author": "Szacsuri Norbert <szacskesz@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dderevjanik/wsdl-tsclient/issues"
+    "url": "https://github.com/szacskesz/wsdl-tsclient/issues"
   },
-  "homepage": "https://github.com/dderevjanik/wsdl-tsclient#readme",
+  "homepage": "https://github.com/szacskesz/wsdl-tsclient#readme",
   "devDependencies": {
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
     "tap-spec": "^5.0.0",
     "tape": "^5.5.3",
     "ts-node": "^10.7.0",
